# tax-reporting

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.ini  config.py  docker-compose.yaml  domain.py  extraction.py  lint.py  persisting.py  pyproject.toml  reporting.py  requirements.txt  setup.py  test-requirements.txt  transformation.py
.agents/skills/fix-issues/: SKILL.md
.agents/skills/how-to-write-skills/: SKILL.md
.agents/skills/how-to-write-skills/references/: progressive-disclosure.md
.agents/skills/run-tests-skill/: SKILL.md
.agents/skills/test-writer/: SKILL.md
.claude/: settings.local.json
.claude/skills/fix-issues/: SKILL.md
.claude/skills/how-to-write-skills/: SKILL.md
.claude/skills/how-to-write-skills/references/: frontmatter-guide.md  skill-sizes.md  skill-structure.md
.claude/skills/run-tests-skill/: SKILL.md
.claude/skills/test-writer/: SKILL.md
docs/: project-guidelines.md
docs/domain/: crypto_implementation_guidelines.md  crypto_reporting_guidelines.md  crypto_rules.md  development_lessons.md  koinly_guidelines.md  plan_quality_guidelines.md  shares_reporting_guidelines.md
docs/plans/: 2026-03-27-rename-to-tax-reporting-and-reduce-review-flags.md  2026-04-05-koinly-first-token-origin.md  2026-04-05-remove-legacy-token-origin-and-add-safe-examples.md  2026-04-07-crypto-grouping-regression-check.md  2026-04-12-fix-column-widths-restructure-persisting.md  crypto_manual_review_reduction.md  reduce-crypto-capital-gains-lines.md  temporal-crypto-operator-origins.md
docs/plans/completed/: 2026-03-27-rename-to-tax-reporting-and-reduce-review-flags.md  2026-04-05-koinly-first-token-origin.md  2026-04-05-remove-legacy-token-origin-and-add-safe-examples.md  2026-04-07-crypto-day-level-aggregation.md  2026-04-07-crypto-grouping-regression-check.md  2026-04-08-crypto-capital-gains-statistics.md  2026-04-12-fix-column-widths-restructure-persisting.md  2026-04-13-example-data-flag-and-column-widths.md  aggregate-crypto-rewards-income.md  crypto_manual_review_reduction.md
docs/post-mortem/: aggregate-crypto-rewards-review-analysis.md
docs/presentation/: project-walkthrough.md
docs/tax/: README.md
docs/tax/crypto-origin/: README.md  entity_selection_criteria.md  mapping_decision_log.md  operator_chain_origin_registry.md  sources.md
docs/tax/crypto-origin/official/: aptos_terms_2025-08-29.md  arbitrum_foundation_ma_2023-07-20.md  base_terms_2025-12-04.md  berachain_terms_2025-02-05.md  bnb_chain_terms_2026-01.md  ethereum_foundation_2024-05-08.md  filecoin_foundation_job_board_privacy_2024-04.md  gate_eu_about_undated.md  kraken_eea_licensing_undated.md  polygon_terms_2024-01-23.md  solana_foundation_site_undated.md  starknet_foundation_privacy_undated.md  sui_terms_undated.md  ton_foundation_site_undated.md  tonkeeper_terms_2025-02-12.md  zksync_terms_undated.md
docs/tax/crypto-origin/public/: mantle_public_record_2024-03-15.md
docs/tax/eu-crypto-tax/: sources.md
docs/tax/eu-crypto-tax/official/: dac8_directive_eu_2023_2226_2026-04-01_en.html  mica_regulation_eu_2023_1114_2026-04-01_en.html
docs/tax/portugal-crypto/: README.md  operator_origin_registry.md  sources.md
docs/tax/portugal-crypto-tax/: README.md  sources.md
docs/tax/portugal-crypto-tax/official/: cirs_art10_portal_2026-04-01.html
docs/tax/portugal-crypto/examples/: koinly_report_selection.md
docs/tax/portugal-crypto/official/: dre_portaria_104_2026.html
resources/: shares_example.csv
resources/source/: ib_export_example.csv  shares-leftover_example.csv
resources/source/example/: ib_export.csv  shares-leftover.csv
resources/source/example/koinly2024/: koinly_2024_capital_gains_report_xY9kLm2pQr_1700000000.csv  koinly_2024_income_report_aB3cDn5oEf_1700000003.csv  koinly_2024_transaction_history_xY9kLm2pQr_1700000001.csv
shares_reporting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shares_reporting/: __init__.py  main.py
src/shares_reporting/application/: __init__.py  crypto_reporting.py  extraction.py  persisting.py  transformation.py
src/shares_reporting/application/extraction/: __init__.py  contexts.py  (+3 more)
src/shares_reporting/domain/: accumulators.py  collections.py  constants.py  entities.py  exceptions.py  value_objects.py
src/shares_reporting/infrastructure/: __init__.py  config.py  isin_country.py  logging_config.py  validation.py
tests/: __init__.py  config.ini  conftest.py  test_data.py  test_exchange_parsing.py  test_reporting.py  test_reporting_raw_ib.py  test_shares.py  test_shares_raw_ib.py
tests/application/: __init__.py  test_dividend_edge_cases.py  test_dividend_extraction.py  test_dividend_integration.py  test_dividend_missing_isin.py  test_dividend_persisting.py  test_extraction.py  test_isin_extraction.py  test_missing_isin_behavior.py  test_placeholder_buys.py  test_raw_ib_export_parsing.py
tests/domain/: __init__.py  test_accumulators.py  test_collections.py  test_entities.py  test_value_objects.py
tests/end_to_end/: test_example_report_generation.py  test_excel_report_generation.py  test_full_ib_export_pipeline.py  test_readme_example_documentation.py
tests/infrastructure/: __init__.py  test_config.py  test_isin_country.py
tests/integration/: test_dividend_processing_integration.py  test_excel_generation_integration.py  test_leftover_integration.py
tests/resources/: expected.xlsx  ib_multi_strategy_raw.csv  ib_multi_strategy_test.csv  ib_simple_raw.csv  simple.csv  test_ib_export.csv  test_shares-leftover.csv  tmp.xlsx  tmp_raw_ib.xlsx
tests/unit/: test_cli.py
tests/unit/application/: test_crypto_origin_resolver.py  test_crypto_reporting.py  test_dividend_edge_cases.py  test_dividend_extraction.py  test_dividend_missing_isin.py  test_isin_extraction.py  test_main_koinly_directory.py  test_missing_isin_behavior.py  test_persisting.py  test_placeholder_buys.py  test_raw_ib_export_parsing.py
tests/unit/domain/: test_accumulators.py  test_collections.py  test_entities.py  test_exceptions.py  test_value_objects.py
tests/unit/infrastructure/: test_config.py  test_isin_country.py
(+14 files in other folders)
