[tool.poetry]
name = "shares-reporting"
version = "0.0.1"
description = "Shares reporting tool for tax reporting in Portugal"
authors = ["Andrey Dmitriev <dmitriev.andrey.vitalyevich@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = true
packages = [{include = "shares_reporting", from = "src"}]
homepage = "https://github.com/bes-shutok/shares"
repository = "https://github.com/bes-shutok/shares"
keywords = ["finance", "tax", "reporting", "shares", "trading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"
pycountry = "^24.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.5"
types-openpyxl = "^3.1.5.20250919"

[tool.poetry.scripts]
shares-reporting = "shares_reporting.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

# Include source files
include = ["src/**/*.py", "tests/**/*.py"]

# Exclude patterns
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-unused-arguments
    "ARG",
    # flake8-no-pep420
    "FA",
    # flake8-datetimez
    "DTZ",
    # flake8-pathlib
    "PTH",
    # flake8-todos
    "TD",
    # flake8-fixme
    "FIX",
    # flake8-raise
    "RSE",
    # flake8-bandit (basic security checks)
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-pytest-style
    "PT",
    # pydocstyle
    "D",
    # Pylint
    "PL",
    # Pylint errors (including logging format)
    "PLE",
    # flake8-logging-format
    "G",
]

ignore = [
    # Star imports are allowed for type checking and package exports
    "F403",
    "F405",
    # Allow unused arguments when prefixed with underscore
    "ARG001",
    "ARG002",
    # Allow TODO comments without specific formats
    "TD001",
    "TD002",
    "TD003",
    # Allow FIXME comments
    "FIX001",
    "FIX002",
    # Allow datetime imports without timezone awareness for this domain
    "DTZ001",
    "DTZ005",
    # Magic numbers are acceptable in some domain contexts
    "S105",
    # Allow missing docstrings for trivial getter/setter methods
    "D102",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"
# Ignore missing docstrings for trivial property methods
ignore-decorators = ["property"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["shares_reporting"]
known-third-party = ["pytest", "openpyxl", "pycountry"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Allow assert statements in tests
    "ARG001",  # Allow unused arguments in tests
    "ARG002",  # Allow unused arguments in tests
    "PT001",  # Allow pytest fixture names without underscore prefix
    "PT023",  # Allow @pytest.fixture without parentheses
    "PLR2004",  # Allow magic values in tests
    "D",        # Allow missing docstrings in tests
    "PLC0415",  # Allow imports outside top-level in tests
]

"__init__.py" = [
    "F401",  # Allow unused imports in __init__.py files
    "F403",  # Allow star imports in __init__.py files
    "F405",  # Allow names that may be undefined from star imports in __init__.py files
]
